--- a/2024/Quest11/Day11.csproj
+++ b/2024/Quest11/Day11.csproj
@@ -26,6 +26,9 @@
     <None Update="Sample.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Sample3.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
